2010-07-20  Sebastien Pouliot  <sebastien@ximian.com>

	* image.c: Use DPI from source image when creating a Graphics
	instance from it. Fix bug #556181

2010-07-14  Sebastien Pouliot  <sebastien@ximian.com>

	* lineargradientbrush.c: Do not accept empty (width/height) 
	rectangles to create a linear brush. Fix bug #537396

2010-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* pngcodec.c: security fix in libpng 1.2 broke the define

2010-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* image.c: Fix #529887 for drawing a part of image with scaling.
	Patch provided by Dan Parnham

2010-05-17  Tom Hindle  <tom_hindle@sil.org>

	* image.c: perform calculated transformation. Fix #606412

2010-05-04  Miguel de Icaza  <miguel@novell.com>

	* Apply patch from Matthew Metnetsky which fixes Bug #590286
	Passing -1 (to indicate null terminated string) for the string
	lengths for GdipDrawString and GdipMeasureString causes the
	program to seg-fault.

2010-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* pngcodec.c: SuSE provided patch for newer libpng (1.4.x). Made
	to be backward compatible with 1.2.x

2010-03-26  Miguel de Icaza  <miguel@novell.com>

	* Apply patch from Matthew Metnetsky which fixes 590503,
	GdipCloneImage not cloning the properties.

2010-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* tiffcodec.c: Don't call TIFFClose with a NULL value. Fix #569940

2009-08-19  Jeffrey Stedfast  <fejj@novell.com>

	* font.c (gdip_get_fontfamily_details_from_freetype): Fixed to use
	values much closer to those returned by GDI+ based on work done in
	Moonlight.

2009-03-20  Tom Hindle <tom_hindle@sil.org>

	* graphics.c: Allow GdipCreateFromHDC to work on the HDC of objects 
	previousy created with GdipCreateFromHDC. Also allow GdipCreateFromHDC
	to work with gtMemoryBitmap types.

2009-01-28  Sebastien Pouliot  <sebastien@ximian.com>

	* image.c: Revert last change wrt resolution

2009-01-02  Sebastien Pouliot  <sebastien@ximian.com>
